@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.11-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix leaks
+
+ -- Globus Toolkit <support@globus.org>  Fri, 28 Sep 2018 16:47:01 +0000
+
 globus-gssapi-gsi (13.10-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix resource leak when loading cert directories
